hphp/hack/test/typecheck/enum_class_label/memoized_wrong_enum_class.php.exp
File "memoized_wrong_enum_class.php", line 7, characters 13-19:
`__Memoize` can only be used with items from MemoizeOption. (Naming[2124])
